<resources>
    <string name="app_name">Sqlite43</string>
    <string name="designation">Designation</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="back">Back</string>
    <string name="enter_user_id">Enter User id :</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_designation">Enter Designation</string>
    <string name="enter_userid">Enter Userid</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="database_connectivity_sqlite">Database Connectivity SQLite</string>
    <string name="view">View</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
</resources>
