<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/fstTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="150dp"
        android:textSize="25sp"
        android:text="@string/name" />
    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:ems="10"
        android:inputType="text"
        android:autofillHints=""
        tools:ignore="LabelFor"
        />
    <TextView
        android:id="@+id/secTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="25sp"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        />
    <EditText
        android:id="@+id/txtLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:ems="10"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor"
        />
    <TextView
        android:id="@+id/thirdTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/designation"
        android:textSize="25sp"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        />
    <EditText
        android:id="@+id/txtDesignation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:ems="10"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor"
        />
    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:text="@string/save"
        android:textSize="25sp"
        android:background="@drawable/button"
        android:textColor="#ffffff"/>
</LinearLayout>