<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <TextView
        android:id="@+id/loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/enter_location"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        />
    <EditText
        android:id="@+id/uloc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:inputType="text"
        android:autofillHints=""
        tools:ignore="LabelFor"
        />
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:text="@string/enter_designation"
    android:textSize="25sp"
    android:textColor="@color/colorPrimary"
    />
    <EditText
        android:id="@+id/udes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:inputType="text"
        android:autofillHints=""
        tools:ignore="LabelFor"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/enter_userid"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        />
    <EditText
        android:id="@+id/uuid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:inputType="number"
        android:autofillHints=""
        tools:ignore="LabelFor"
        />
    <Button
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/button"
        android:textColor="#ffffff"
        android:text="@string/update"
        android:textSize="30sp"
        />
</LinearLayout>